overflow was fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,7 +50,6 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
-  overflow: auto;
   height: calc(100% - 130px);
   margin-top: 30px;
 
